export const snapshot = {};

snapshot[`someCall() 1`] = `
{
  args: [
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall('a', 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a",
    },
    {
      type: "number",
      value: 111,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall('a \\'ha\\'', 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a 'ha'",
    },
    {
      type: "number",
      value: 111,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall(\`a\`, 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a",
    },
    {
      type: "number",
      value: 111,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall(\`a \\\`ha\\\`\`, 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a \`ha\`",
    },
    {
      type: "number",
      value: 111,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall("a", 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a",
    },
    {
      type: "number",
      value: 111,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall("a \\"ha\\"", 111) 1`] = `
{
  args: [
    {
      type: "string",
      value: 'a "ha"',
    },
    {
      type: "number",
      value: 111,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall("a", 111,true) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a",
    },
    {
      type: "number",
      value: 111,
    },
    {
      type: "boolean",
      value: true,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall("a", 111, false) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a",
    },
    {
      type: "number",
      value: 111,
    },
    {
      type: "boolean",
      value: false,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall("a false true 123 b", 111, false) 1`] = `
{
  args: [
    {
      type: "string",
      value: "a false true 123 b",
    },
    {
      type: "number",
      value: 111,
    },
    {
      type: "boolean",
      value: false,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`someCall(-123) 1`] = `
{
  args: [
    {
      type: "number",
      value: -123,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`some_call() 1`] = `
{
  args: [
  ],
  line: "",
  name: "some_call",
  type: "parsed",
}
`;

snapshot[`some-call() 1`] = `
{
  args: [
  ],
  line: "",
  name: "some-call",
  type: "parsed",
}
`;

snapshot[`SOMECALL() 1`] = `
{
  args: [
  ],
  line: "",
  name: "SOMECALL",
  type: "parsed",
}
`;

snapshot[`malformed("a" 1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;

snapshot[`someCall(-123.500) 1`] = `
{
  args: [
    {
      type: "number",
      value: -123.5,
    },
  ],
  line: "",
  name: "someCall",
  type: "parsed",
}
`;

snapshot[`testing blah 1`] = `'{"index":8,"rowBegin":1,"columnBegin":9,"rowEnd":1,"columnEnd":13}: Unable to consume token: blah'`;

snapshot[`empty string 1`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;

snapshot[`Thought: I need to do something
Action: someFunction() | someOtherFunction()
Result: blah blah blah blah 1`] = `
{
  action: "someFunction() | someOtherFunction()",
  result: "blah blah blah blah",
  thought: "I need to do something",
}
`;

snapshot[`Thought: I need to do something action: thought: hmmm
Action: someFunction() | someOtherFunction()
Result: blah blah blah blah 1`] = `
{
  action: "someFunction() | someOtherFunction()",
  result: "blah blah blah blah",
  thought: "I need to do something action: thought: hmmm",
}
`;

snapshot[`Thought: I need to do something
Action: someFunction() | someOtherFunction() 1`] = `
{
  action: "someFunction() | someOtherFunction()",
  result: undefined,
  thought: "I need to do something",
}
`;

snapshot[`tHOUght: I need to do something
aCTion  :    someFunction() | someOtherFunction() 1`] = `
{
  action: "someFunction() | someOtherFunction()",
  result: undefined,
  thought: "I need to do something",
}
`;

snapshot[`Thought: I need to do something Action: head fake

Action: someFunction() | someOtherFunction()
Result: blah blah blah blah 1`] = `
{
  action: "someFunction() | someOtherFunction()",
  result: "blah blah blah blah",
  thought: "I need to do something Action: head fake",
}
`;

snapshot[`Thought no colon doesnt work
Action hahaha 1`] = `'{"index":8,"rowBegin":1,"columnBegin":9,"rowEnd":1,"columnEnd":9}: Unable to consume token: '`;

snapshot[`Action: action should not come first
Thought: ha 1`] = `'{"index":0,"rowBegin":1,"columnBegin":1,"rowEnd":1,"columnEnd":7}: Unable to consume token: Action'`;

snapshot[`completely invalid 1`] = `'{"index":0,"rowBegin":1,"columnBegin":1,"rowEnd":1,"columnEnd":1}: Unable to consume token: '`;

snapshot[`empty string 2`] = `"<END-OF-FILE>: Unable to consume token: <END-OF-FILE>"`;
